fix: :bug: Fixeo overflow en /search/ en precios largos en Sale

--- a/chrome_extension/css/styles.scss
+++ b/chrome_extension/css/styles.scss
@@ -218,6 +218,12 @@ body {
   display: flex !important;
 }
 
+.search_price_discount_combined {
+  .discount_final_price {
+    width: max-content;
+  }
+}
+
 // URLS /SALE/
 .promo_item_list {
   .price {
